--- a/app/src/main/res/layout/sorusayfasi.xml
+++ b/app/src/main/res/layout/sorusayfasi.xml
@@ -112,7 +112,7 @@
             android:layout_alignParentBottom="true"
             android:paddingBottom="10dp"
             android:visibility="invisible">
-            <ImageButton
+            <RelativeLayout
                 android:layout_width="200dp"
                 android:layout_height="100dp"
                 android:id="@+id/bEvet2"
@@ -122,15 +122,26 @@
                 android:layout_marginStart="29dp"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true" />
-            <ImageButton
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:id="@+id/bHayir2"
-                android:layout_alignParentTop="true"
-                android:layout_toRightOf="@+id/bEvet2"
-                android:layout_toEndOf="@+id/bEvet2"
-                android:layout_marginLeft="20dp"/>
+                android:layout_alignParentStart="true">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Large Text"
+                    android:id="@+id/textView" />
+            </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:id="@+id/bHayir2"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/bEvet2"
+            android:layout_toEndOf="@+id/bEvet2"
+            android:layout_marginLeft="20dp">
 
         </RelativeLayout>
+
+            </RelativeLayout>
 </RelativeLayout>
