--- a/app/src/main/res/layout/tab22.xml
+++ b/app/src/main/res/layout/tab22.xml
@@ -2,7 +2,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:background="@mipmap/loading">
 
     <TextView
 
@@ -13,7 +14,9 @@
         android:id="@+id/textView7"
         android:layout_gravity="center_horizontal"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:textStyle="bold" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -21,68 +24,50 @@
         android:textSize="18sp"
         android:text="Harika bir soru oluştur ve taşşaga dus"
         android:id="@+id/textView8"
-        android:layout_gravity="center_horizontal"
         android:layout_below="@+id/textView7"
-        android:layout_alignLeft="@+id/relativeLayout3"
-        android:layout_alignStart="@+id/relativeLayout3" />
+
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:textStyle="italic" />
 
     <RelativeLayout
-        android:layout_width="342dp"
-        android:layout_height="134dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/textView7"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="77dp"
         android:id="@+id/relativeLayout3">
 
-        <TextView
+        <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Diyelim Ki"
-            android:id="@+id/textView9"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
-
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:id="@+id/editText"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true" />
+            android:background="@mipmap/diyelimki_kucuk"
+            android:layout_marginTop="50dp" />
 
     </RelativeLayout>
 
     <RelativeLayout
-        android:layout_width="300dp"
-        android:layout_height="130dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/relativeLayout3"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="61dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Ama"
-            android:id="@+id/textView11"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
+        android:background="@mipmap/ama_kucuk">
 
         <EditText
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/editText2"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:background="@mipmap/ama_kucuk" />
 
     </RelativeLayout>
 
-    <Button
+    <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Soruyu Oluştur"
         android:id="@+id/button"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="360dp"
+        android:background="#00000000"
+        android:src="@mipmap/soruyu_gonder" />
 </RelativeLayout>
