--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="@mipmap/loading">
 
-    <LinearLayout
+    <FrameLayout
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -16,7 +16,16 @@
             android:id="@+id/button3"
             android:background="#00000000"
             android:src="@mipmap/geri" />
-    </LinearLayout>
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageButton10"
+            android:layout_marginLeft="263dp"
+            android:src="@mipmap/plus"
+            android:background="#00000000"
+            android:layout_gravity="right|center_vertical" />
+    </FrameLayout>
 
     <TabHost
         android:layout_width="match_parent"
@@ -29,11 +38,19 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageButton11"
+                android:src="@mipmap/altin_kazan"
+                android:background="#00000000"
+                android:layout_gravity="center" />
+
             <TabWidget
                 android:id="@android:id/tabs"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"></TabWidget>
+                android:layout_marginTop="30dp"></TabWidget>
 
             <FrameLayout
                 android:id="@android:id/tabcontent"
@@ -50,15 +67,19 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:text="Modes"
-                        android:textSize="30sp"
-                        android:id="@+id/textView6" />
+                        android:text="Kategoriler"
+                        android:textSize="20dp"
+                        android:id="@+id/textView6"
+                        android:textStyle="bold"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="10dp" />
 
                     <ImageButton
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:id="@+id/imageButton2"
-                        android:background="@mipmap/ic_launcher"/>
+                        android:background="@mipmap/ic_launcher"
+                        android:layout_marginTop="10dp" />
                     <ImageButton
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
